# pik-pik_qmr

./: README.md  ee.pik_pik.qmr.json  meson.build
data/: ee.pik_pik.qmr.appdata.xml.in  ee.pik_pik.qmr.desktop.in  ee.pik_pik.qmr.gschema.xml  meson.build
data/icons/: meson.build
po/: POTFILES  meson.build
src/: main.c  meson.build  pik-pik_qmr-application.c  pik-pik_qmr-application.h  pik-pik_qmr-main.ui  pik-pik_qmr-menu.xml  pik-pik_qmr-window.c  pik-pik_qmr-window.h  pik-pik_qmr-window.ui  pik-pik_qmr-window.ui~  pik-pik_qmr.gresource.xml  pik-pik_qmr_ui.cmb
